chore: Typo & update deps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,18 @@
 [project]
 name = "avilla-lagrange"
 version = "0.1.0"
-description = "Lagrange protocol for Avilla."
+description = "Lagrange protocol for Avilla"
 authors = [
-    {name = "F_Qilin", email = "fzq0003@gmail.com"},
+    { name = "F_Qilin", email = "fzq0003@gmail.com" },
 ]
 dependencies = [
-    "avilla-core>=1.0.0a26",
-    "lagrange-python>=0.1.3",
+    "avilla-core>=1.0.0a27",
+    "lagrange-python>=0.1.5",
     "avilla-standard-qq>=1.0.0a21",
 ]
 requires-python = ">=3.10"
 readme = "README.md"
-license = {text = "MIT"}
+license = { text = "MIT" }
 
 [build-system]
 requires = ["pdm-backend"]
